Changes made to support more recent version of source generation

--- a/SimSgt_V3.0.3/src/makefile
+++ b/SimSgt_V3.0.3/src/makefile
@@ -11,6 +11,8 @@ LDLIBS = -L${GETPARLIB} -lm -lget
 UFLAGS = -O3
 CC = mpicc
 FC = mpif77
+#CC = gcc
+#FC = gfortran
 
 ##### If hardware and OS supports 64-bit use the following to
 #     enable option of opening large (>2**31 bytes) files
