--- a/HFSim_mem/src/makefile.summit
+++ b/HFSim_mem/src/makefile.summit
@@ -9,34 +9,27 @@ GETPAR_DIR = ../../Getpar/getpar
 RUPGEN_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake/software/RuptureCodes/RupGen-api-5.4.2
 MEMCACHED_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake/utils/libmemcached_1.0.18
 
-#UCVM_HOME = /projects/sciteam/baln/CyberShake/software/UCVM/ucvm_14.3.0
-#ETREE_HOME = ${UCVM_HOME}/lib/euclid3
-#PROJ4_HOME = ${UCVM_HOME}/lib/proj-4
-#VX_HOME = ${UCVM_HOME}/model/cvmh1191
-#CVMS_HOME = ${UCVM_HOME}/model/cvms4
-#CVMSI_HOME = ${UCVM_HOME}/model/cvms426
-UCVM_HOME = /gpfs/alpine/proj-shared/geo112/CyberShake/software/UCVM/ucvm-18.5.0
+UCVM_HOME = /gpfs/alpine/proj-shared/geo112/CyberShake/software/UCVM/ucvm-22.7.0
 ETREE_HOME = ${UCVM_HOME}/lib/euclid3
-PROJ4_HOME = ${UCVM_HOME}/lib/proj-4
-VX_HOME = ${UCVM_HOME}/model/cvmh1510
+PROJ4_HOME = ${UCVM_HOME}/lib/proj-5
+VX_HOME = ${UCVM_HOME}/model/cvmh
 CVMS_HOME = ${UCVM_HOME}/model/cvms
-CVMSI_HOME = ${UCVM_HOME}/model/cvms426
+CVMSI_HOME = ${UCVM_HOME}/model/cvmsi
 CVMS5_HOME = ${UCVM_HOME}/model/cvms5
 CCA_HOME = ${UCVM_HOME}/model/cca
 CENCAL_HOME = ${UCVM_HOME}/model/cencal
 
 #For integration with BBP
-BBP_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake/software/bbp/bbp-19.8.0-python3/bbp
+BBP_DIR = /gpfs/alpine/scratch/callag/geo112/bbp/bbp
 GP_DIR = ${BBP_DIR}/src/gp
 SRF2STOCH_DIR = ${GP_DIR}/StandRupFormat
 WCC_DIR = ${GP_DIR}/WccFormat/Progs
 HB_HIGH_DIR = ${GP_DIR}/StochSim/V6.0
 
 HF_SYNTH_BBP_OBJS = hfsim_bbp.o ${SRF2STOCH_DIR}/srf2stoch_sub.o get_vs30.o
-HFSIM_BBP_OBJS = ${WCC_DIR}/wcc_getpeak_sub.o ${WCC_DIR}/wcc_siteamp14_sub.o ${HB_HIGH_DIR}/hb_high_v6.0.3_sub.o misc.o iofunc.o ${WCC_DIR}/fft1d.o ${WCC_DIR}/integ_diff_sub.o ${WCC_DIR}/wcc_tfilter_sub.o
-BBP_INC = -I${WCC_DIR} -I${SRF2STOCH_DIR}
+HFSIM_BBP_OBJS = ${WCC_DIR}/wcc_getpeak_sub.o ${WCC_DIR}/wcc_siteamp14_sub.o ${HB_HIGH_DIR}/hb_high_v6.0.5_sub.o misc.o iofunc.o ${WCC_DIR}/fft1d.o ${WCC_DIR}/integ_diff_sub.o ${WCC_DIR}/wcc_tfilter_sub.o
+BBP_INC = -I${GP_DIR}
 
-#UCVMLIBS = -L${UCVM_HOME}/lib -lucvm -lvxapi -L${VX_HOME}/lib -lgeo -L${VX_HOME}/lib -L${CVMS_HOME}/lib -lcvms -L${CVMSI_HOME}/lib -lcvmsi -L${PROJ4_HOME}/lib -lproj -L${ETREE_HOME}/lib -letree -Wl,-R${CVMSI_HOME}/lib -Wl,-R${ETREE_HOME}/lib -Wl,-R${PROJ4_HOME}/lib
 UCVMLIBS = -L${UCVM_HOME}/lib -lucvm -lvxapi -L${VX_HOME}/lib -lgeo -L${VX_HOME}/lib -L${CVMS_HOME}/lib -lcvms -L${CVMSI_HOME}/lib -lcvmsi  -L${CENCAL_HOME}/lib -lcencalvm -L${PROJ4_HOME}/lib -lproj -L${ETREE_HOME}/lib -letree -L${UCVM_HOME}/lib -lucvm -lstdc++ -ldl 
 UCVMINC = -I${UCVM_HOME}/include -I${GETPAR_HOME}/include
 
@@ -48,7 +41,6 @@ LIBS = -lm ${GETPAR_DIR}/lib/libget.a -L${OLCF_FFTW_ROOT}/lib -lfftw3f -lgfortra
 IFLAGS = -I${GETPAR_DIR}/include -I${RUPGEN_DIR}/include -I${MEMCACHED_DIR}/include
 LDLIBS = -L${RUPGEN_DIR}/lib -lrupgen -L${MEMCACHED_DIR}/lib -lmemcached ${LIBS} -lstdc++ 
 
-#LF_FLAGS = -D_FILE_OFFSET_BITS=32
 #
 # use following for large file capability
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
