--- a/LF_Site_Response/src/makefile.summit
+++ b/LF_Site_Response/src/makefile.summit
@@ -5,19 +5,20 @@ GETPAR_DIR = ../../Getpar/getpar
 RUPGEN_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake/software/RuptureCodes/RupGen-api-5.4.2
 MEMCACHED_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake/utils/libmemcached_1.0.18
 
-UCVM_HOME = /gpfs/alpine/proj-shared/geo112/CyberShake/software/UCVM/ucvm-18.5.0_01302019
+UCVM_HOME = /gpfs/alpine/proj-shared/geo112/CyberShake/software/UCVM/ucvm-22.7.0
+
 ETREE_HOME = ${UCVM_HOME}/lib/euclid3
-PROJ4_HOME = ${UCVM_HOME}/lib/proj-4
-VX_HOME = ${UCVM_HOME}/model/cvmh1510
+PROJ4_HOME = ${UCVM_HOME}/lib/proj-5
+VX_HOME = ${UCVM_HOME}/model/cvmh
 CVMS_HOME = ${UCVM_HOME}/model/cvms
-CVMSI_HOME = ${UCVM_HOME}/model/cvms426
+CVMSI_HOME = ${UCVM_HOME}/model/cvmsi
 CENCAL_HOME = ${UCVM_HOME}/model/cencal
 
-BBP_HOME = /gpfs/alpine/proj-shared/geo112/CyberShake/software/bbp/bbp-19.8.0-python3/bbp
+BBP_HOME = /gpfs/alpine/proj-shared/geo112/CyberShake/software/bbp/bbp-dev/bbp
 WCC_DIR = ${BBP_HOME}/src/gp/WccFormat/Progs
 
 BBP_OBJS = retrieve_vs.o iofunc.o misc.o ${WCC_DIR}/wcc_siteamp14_sub.o ${WCC_DIR}/integ_diff_sub.o ${WCC_DIR}/wcc_getpeak_sub.o ${WCC_DIR}/fft1d.o
-BBP_INC = -I${WCC_DIR}
+BBP_INC = -I${BBP_HOME}/src/gp
 
 UCVMLIBS = -L${UCVM_HOME}/lib -lucvm -lvxapi -L${VX_HOME}/lib -lgeo -L${VX_HOME}/lib -L${CVMS_HOME}/lib -lcvms -L${CVMSI_HOME}/lib -lcvmsi -L${PROJ4_HOME}/lib -lproj -L${ETREE_HOME}/lib -letree -L${CENCAL_HOME}/lib -lcencalvm
 UCVMINC = -I${UCVM_HOME}/include -I${GETPAR_HOME}/include
