--- a/RuptureCodes/RupGen-api-5.5.2/src/Makefile
+++ b/RuptureCodes/RupGen-api-5.5.2/src/Makefile
@@ -11,7 +11,7 @@ include ../../../Compilers.mk
 CC=gcc
 FC=gfortran
 UFLAGS = -O3 -g
-CFLAGS = -I${GETPARINCL} \
+CFLAGS = -I${GETPARINCL} -I${TACC_FFTW3_INC}\
 	-D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE \
 	-D_FILE_OFFSET_BITS=64 -DUSE_IOBUF_MACROS ${UFLAGS}
 
