--- a/cybershake.cfg
+++ b/cybershake.cfg
@@ -1,7 +1,7 @@
-CS_PATH = /gpfs/alpine/proj-shared/geo112/CyberShake/software
-SCRATCH_PATH = /gpfs/alpine/scratch/callag/geo112
-TMP_PATH = /gpfs/alpine/scratch/callag/geo112/tmp
-RUPTURE_ROOT = /gpfs/alpine/proj-shared/geo112/CyberShake/ruptures
-MPI_CMD = jsrun
-LOG_PATH = /gpfs/alpine/proj-shared/geo112/CyberShake/software/logs
-DB_WR_FILE = /gpfs/alpine/proj-shared/geo112/CyberShake/software/db_info.txt
+CS_PATH = /work2/00349/scottcal/frontera/CyberShake/software
+SCRATCH_PATH = /scratch1/00349/scottcal/scratch
+TMP_PATH = /scratch1/00349/scottcal/scratch/tmp
+RUPTURE_ROOT = /work2/00349/scottcal/frontera/CyberShake/ruptures
+MPI_CMD = ibrun
+LOG_PATH = /work2/00349/scottcal/frontera/CyberShake/logs
+DB_WR_FILE = /work2/00349/scottcal/frontera/CyberShake/software/db_info.txt
