--- a/UCVM/smoothing/makefile
+++ b/UCVM/smoothing/makefile
@@ -1,7 +1,8 @@
 smooth_mpi : smooth_mpi.c
-	mpicc -g -O3 -o smooth_mpi smooth_mpi.c
+	cc -g -O3 -o smooth_mpi smooth_mpi.c
 
 smooth : smooth.c
-	gcc -g -O3 -o smooth smooth.c
+	cc -g -O3 -o smooth smooth.c
 
-
+clean :
+	-rm -f smooth_mpi smooth 
