--- a/DirectSynth_RSQSim/src/makefile.summit
+++ b/DirectSynth_RSQSim/src/makefile.summit
@@ -12,16 +12,18 @@ TEST_DURATION_OBJS = ${DURATION_OBJS} iofunc.o
 
 LF_FLAGS = -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
 
-BASE_DIR = /gpfs/alpine/proj-shared/geo112/CyberShake
+BASE_DIR = /work2/00349/scottcal/frontera/CyberShake
 GETPAR = ../../Getpar/getpar
 LIBCFU = ${BASE_DIR}/utils/libcfu_0.03
 LDLIBS = -L${GETPAR}/lib -lget -lmemcached -L${BASE_DIR}/utils/libmemcached_1.0.18/lib -L${LIBCFU}/lib -lcfu -lm 
 IFLAGS = -I${GETPAR}/include -I${BASE_DIR}/utils/libmemcached_1.0.18/include -I${LIBCFU}/include 
 
-UFLAGS = -O3 -Wuninitialized -g -fno-expensive-optimizations
+#UFLAGS = -O3 -Wuninitialized -g -fno-expensive-optimizations
+UFLAGS = -O3 -g -mkl
 
 CFLAGS = ${UFLAGS} ${IFLAGS}
-FFLAGS = ${UFLAGS} -ffixed-line-length-132
+FFLAGS = ${UFLAGS} -132 -nofor-main
+#FFLAGS = ${UFLAGS} -ffixed-line-length-132
 #FFLAGS = ${UFLAGS}
 
 CC = mpicc
